@@ -384,6 +384,7 @@
                                 --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
                                 --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
                                 --add-opens=java.base/java.nio=ALL-UNNAMED
+                                --add-opens=java.base/java.lang=ALL-UNNAMED
                             </argLine>
                         </configuration>
                     </plugin>
